# rl-hedging-engine

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
scripts/: evaluate.py  train.py
src/rlhedge/: __init__.py  types.py
src/rlhedge/envs/: __init__.py  config.py  costs.py  hedging_env.py  ledger.py  rewards.py
src/rlhedge/evaluation/: __init__.py  backtest.py  metrics.py  plots.py
src/rlhedge/models/: __init__.py  baselines.py  networks.py  ppo.py  td3.py
src/rlhedge/pricing/: __init__.py  blackscholes.py  payoffs.py
src/rlhedge/simulation/: __init__.py  gbm.py
src/rlhedge/training/: __init__.py  logger.py  replay.py  rollout.py  trainer.py
tests/: __init__.py  test_env.py  test_models.py  test_pricing.py
